[package]
name = "rwt"
version = "0.3.0"
description = "Rebel Web Tokens, similar in form and function to JSON Web Tokens"
readme = "README.md"
repository = "https://github.com/archer884/rwt"
license = "MIT/Apache-2.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
base64 = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
