[package]
name = "rwt"
version = "0.3.0"
description = "Rebel Web Tokens, similar in form and function to JSON Web Tokens"
readme = "README.md"
repository = "https://github.com/archer884/rwt"
license = "MIT/Apache-2.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
base64 = "0.5"
rust-crypto = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
