[package]
name = "rwt"
version = "0.4.0"
description = "Rebel Web Tokens, similar in form and function to JSON Web Tokens"
readme = "README.md"
repository = "https://github.com/archer884/rwt"
license = "MIT/Apache-2.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.12.1"
rust-crypto = "0.2.36"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
